--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
                 </span>
                 <span class="description uppercase">Pendentes <i class="bi bi-caret-down-fill"></i></span> <!--NAME-->
             </a>
+            <!--SUBMENU DINAMICO-->
+            <div class="sub-menu collapse" id="submenu">
+                <div id="taskList"></div> <!-- As tarefas serão adicionadas aqui -->
+            </div>
+            
             <!-- SUBMENU (DROPDOWN ITEMS)-->
             <div class="sub-menu collapse" id="submenu"> <!--ID SUBMENU-->
                 <a class="nav-link" href="#"> <!--REDIRECT-->
@@ -119,16 +124,15 @@
                 </div>
                 <div class="modal-body">
                     <label for="nomeLista" class="form-label">Nome da Lista</label>
-                    <input type="text" id="nomeLista" class="form-control" placeholder="Digite aqui...">
+                    <input type="text" id="taskInput" class="form-control" placeholder="Digite aqui...">
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancelar</button>
-                    <button type="button" class="btn btn-outline-primary">Criar</button>
+                    <button type="button" class="btn btn-outline-primary " onclick="addTask()">Criar</button>
                 </div>
             </div>
         </div>
     </div>
-
 
     <!-- MAIN -->
     <main class="main-content">
