--- a/index.html
+++ b/index.html
@@ -217,5 +217,5 @@
 <!--SCRIPTS JS-->
 <script src="script.js"></script> <!--SCRIPT JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script> <!--CDN JS-->
-<script src="../assets/js/color-modes.js"></script> <!--CHANGE THEME-->
+<script src="assets/js/color-modes.js"></script> <!--CHANGE THEME-->
 </html>
