--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="GO+ Team; José Marinaldo, Adriano Júnior, Luiz Gustavo, Antônio Félix, Pedro Henrique Rocha">
-    <meta name="description" content="TODO List completo">
+    <meta name="author" content="GO+ Team; José Marinaldo, Adriano Júnior, Luiz Gustavo, Antônio Félix.">
+    <meta name="description" content="Organize suas tarefas de forma simples e eficiente com o GO+ LIST. Crie, edite e gerencie sua lista de afazeres com facilidade. A produtividade que você precisa, sem complicação!">
     <title>GO+ LIST</title>
     <link rel="shortcut icon" href="imgs/GO-LOGO.ico" type="image/x-icon"> <!--FAVICON-->
     <!--FONT ROBOTO-->
